# a2a-settlement-auth

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  smoke_test.py
a2a_settlement_auth/: __init__.py  claims.py  middleware.py  multisig.py  redis_store.py  scopes.py  spending.py  tokens.py  vault.py  vault_crypto.py  vault_store.py
a2a_settlement_auth/did/: __init__.py  resolver.py  rotation.py
a2a_settlement_auth/federation/: __init__.py  scopes.py
a2a_settlement_auth/vc/: __init__.py  types.py  verifier.py
examples/: __init__.py  end_to_end.py
tests/: test_auth.py  test_vault.py
